utils/styles/custom.scss
/* ... */
// Daily needs

.daily-needs {
  color: $orange;
}
.daily-need-bg {
  background-color: $orange;
}
.product-wrapper {
  max-width: 1200px;
  margin: 0 auto;
  .card {
    min-height: 585px;
  }
  @media screen and(min-width: 993px) and (max-width: 1024px) {
    .slick-prev {
      left: 10px !important;
    }
    .slick-next {
      right: 10px !important;
    }
  }
  @media screen and(min-width: $sm-break) and (max-width: $md-break) {
    .card {
      min-height: 48rem;
    }
  }

  @media screen and(max-width: $md-break) {
    .slick-prev::before,
    .slick-next::before {
      font-size: 2.25rem;
    }
    .slick-prev {
      left: 10px;
    }
    .slick-next {
      right: 10px;
    }
  }
}

.projects {
  .card {
    .title {
      font-family: $font-bold;
    }
    .description {
      font-family: $extended-book;
      font-size: 1.125rem;
      line-height: 1.75rem;
    }
  }
  .text-lead {
    font-size: 1.125rem;
  }
}

.opensource {
  .slick-slider {
    .slick-dots {
      justify-content: center;
      li {
        min-width: 2rem !important;
        button {
          min-width: 1px !important;
          width: 2rem;
          margin: 0 1rem;
          border-radius: 5px;
          height: 4px;
          padding: 3px;
          background-color: #d2d2d2;
        }
        ::before {
          content: '';
          padding: 0;
        }
        &.slick-active {
          button {
            background-color: #101820;
          }
        }
      }
    }
  }
  .caption {
    h5 {
      bottom: 5%;
      padding-left: inherit;
      padding-right: inherit;
      left: 0;
      right: 0;
    }
  }
}

// .swiper-button-prev {
//   background-image: url('/img/home/right-arrow.png') !important;
// }

.swiper-button-next {
  background-image: url('/img/home/arrow-right.png');
  background-repeat: no-repeat;
  background-size: 100% auto;
  background-position: center;
  right: 0 !important;
}
.swiper-button-prev {
  background-image: url('/img/home/arrow-left.png');
  background-repeat: no-repeat;
  background-size: 100% auto;
  background-position: center;
  left: 0 !important;
}

.swiper-button-next::after,
.swiper-button-prev::after {
  display: none;
}

// To be removed
.ctaPurple {
  background-color: #904790;
  border-radius: $border-xl;
}
.ctaTitle {
  font-size: 1.75rem;
  font-family: $header-font;
  @media screen and (max-width: 576px) {
    font-size: 1.6rem;
  }
}
.ctaLink {
  font-size: 1.25rem;
  font-family: $title-font;
  color: #a1d884;
}
.readMore {
  font-size: 1.125rem;
  font-family: $title-font;
}
.ctaLink:hover {
  color: $green-base;
}

// About us page styles
.about-green-bg {
  background-color: #bce194;
}
.about-pink-bg {
  background-color: #ffb1bb;
}
.about-blue-bg {
  background-color: #bbdde6;
}
.about-purple-bg {
  background-color: #eedaea;
}
.about-orange-bg {
  background-color: #ffc27b;
}

.about-pattern-a {
  background-image: url('/img/about-us/about-pattern-a.svg');
}
.about-pattern-b {
  background-image: url('/img/about-us/about-pattern-b.svg');
}
.about-pattern-c {
  background-image: url('/img/about-us/about-pattern-c.svg');
}

.about-pattern-a,
.about-pattern-b,
.about-pattern-c {
  background-size: auto;
  background-position: center;
  background-repeat: no-repeat;

  // @media screen and (min-width: 1200px) {
  //   background-size: cover;
  // }

  @media screen and (min-width: 1920px) {
    background-image: none;
  }
}

.milestones {
  .link::after {
    content: url('/img/right-arrow.svg');
    padding-left: 0.5rem;
    vertical-align: middle;
    display: inline-block;

    @media screen and (max-width: 576px) {
      height: 16px;
    }
  }

  .mobile {
    margin-top: 62px;

    .card {
      border-radius: 2.75rem;
      border: none;
      min-height: 480px;
    }

    .illustration {
      max-width: 224px;
      margin: 0 auto;
    }
  }
}

// Search
.search-box {
  .input-group {
    filter: drop-shadow(0 0.5rem 1rem rgba(0, 0, 0, 0.15));
  }
  .input-group-text {
    border-top-left-radius: 50rem;
    border-bottom-left-radius: 50rem;
  }
  img {
    width: 14px;
    height: 14px;
  }
  .search {
    border-top-right-radius: 50rem;
    border-bottom-right-radius: 50rem;
    &:focus {
      box-shadow: none;
    }
  }
}
.department {
  .css-1okebmr-indicatorSeparator,
  .css-1okebmr-indicatorSeparator {
    background-color: transparent !important;
  }
}

.css-26l3qy-menu {
  margin-top: 0 !important;
  border-radius: 10%;
}

.option-label {
  font-size: 0.875rem;
  font-family: 'Maison Nueue Book';
}

.css-1wa3eu0-placeholder {
  display: block;
}

